[package]
name = "raitweet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bincode = "0.9"
blake3 = "1.3.3"
log = "0.4"
rand = "0.4"
serde_derive = "1.0"
sha3 = "0.7"
simplelog = "0.5"
time = "0.1"

[dev-dependencies]
num-bigint = "0.1"